--- a/src/app/shakemap/metadata/processing/processing.component.html
+++ b/src/app/shakemap/metadata/processing/processing.component.html
@@ -1,264 +1,230 @@
-<div  *ngIf="smProcessing">
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Ground Motion/Intensity Information
-      </mat-panel-title>
-    </mat-expansion-panel-header>
+<div class="container" *ngIf="smProcessing">
+  <div class="content left">
+    <h3>Ground Motion/Intensity Information</h3>
 
-    <ng-template matExpansionPanelContent>
-      <mat-table [dataSource]="smProcessing.ground_motion_modules">
-        <mat-header-row *matHeaderRowDef="headers.groundMotionModules">
-        </mat-header-row>
-        <mat-row *matRowDef="let myRowData;
-            columns: headers.groundMotionModules"></mat-row>
+    <mat-table [dataSource]="smProcessing.ground_motion_modules">
+      <mat-header-row *matHeaderRowDef="headers.groundMotionModules">
+      </mat-header-row>
+      <mat-row *matRowDef="let myRowData;
+          columns: headers.groundMotionModules"></mat-row>
 
-        <ng-container matColumnDef="type">
-          <mat-header-cell *matHeaderCellDef>
-            Type
-          </mat-header-cell>
-          <mat-cell [attr.role]="'rowheader'"
-              [class.mat-cell]="false"
-              class="mat-header-cell"
-              *matCellDef="let module">
+      <ng-container matColumnDef="type">
+        <mat-header-cell *matHeaderCellDef>
+          Type
+        </mat-header-cell>
+        <mat-cell [attr.role]="'rowheader'"
+            [class.mat-cell]="false"
+            class="mat-header-cell"
+            *matCellDef="let module">
 
-            <ng-container *ngIf="names.ground_motion_modules[module.type]
-                as name; else noName">
-              <ng-container *ngIf="abbreviations[module.type] as abbr;
-                  else noAbbr">
+          <ng-container *ngIf="names.ground_motion_modules[module.type]
+              as name; else noName">
+            <ng-container *ngIf="abbreviations[module.type] as abbr;
+                else noAbbr">
 
-                <abbr title="{{ abbr }}">{{ name }}</abbr>
-              </ng-container>
-
-              <ng-template #noAbbr>
-                {{ name }}
-              </ng-template>
+              <abbr title="{{ abbr }}">{{ name }}</abbr>
             </ng-container>
 
-            <ng-template #noName>
-              {{ module.type }}
+            <ng-template #noAbbr>
+              {{ name }}
             </ng-template>
+          </ng-container>
 
-          </mat-cell>
-        </ng-container>
+          <ng-template #noName>
+            {{ module.type }}
+          </ng-template>
 
-        <ng-container matColumnDef="module">
-          <mat-header-cell *matHeaderCellDef>
-            Module
-          </mat-header-cell>
-          <mat-cell *matCellDef="let module">
-            {{ module.module }}
-          </mat-cell>
-        </ng-container>
+        </mat-cell>
+      </ng-container>
 
-        <ng-container matColumnDef="reference">
-          <mat-header-cell *matHeaderCellDef>
-            Reference
-          </mat-header-cell>
-          <mat-cell *matCellDef="let module">
-            {{ module.reference }}
-          </mat-cell>
-        </ng-container>
+      <ng-container matColumnDef="module">
+        <mat-header-cell *matHeaderCellDef>
+          Module
+        </mat-header-cell>
+        <mat-cell *matCellDef="let module">
+          {{ module.module }}
+        </mat-cell>
+      </ng-container>
 
-      </mat-table>
-    </ng-template>
-  </mat-expansion-panel>
+      <ng-container matColumnDef="reference">
+        <mat-header-cell *matHeaderCellDef>
+          Reference
+        </mat-header-cell>
+        <mat-cell *matCellDef="let module">
+          {{ module.reference }}
+        </mat-cell>
+      </ng-container>
 
+    </mat-table>
+  </div>
 
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-        <mat-panel-title>
-          Miscellaneous
-        </mat-panel-title>
-    </mat-expansion-panel-header>
+  <mat-divider [vertical]="true"></mat-divider>
 
-    <ng-template matExpansionPanelContent>
-      <dl *ngIf="smProcessing.miscellaneous as miscellaneous"
-          class="description-table">
+  <div class="content right">
+    <h3>Miscellaneous</h3>
 
-        <dt>Max magnitude to compute bias</dt>
-        <dd *ngIf="miscellaneous.bias_max_mag as biasMaxMag;
+    <dl *ngIf="smProcessing.miscellaneous as miscellaneous"
+        class="description-table">
+
+      <dt>Max magnitude to compute bias</dt>
+      <dd *ngIf="miscellaneous.bias_max_mag as biasMaxMag;
+          else missingData">
+        {{ biasMaxMag }}
+      </dd>
+
+      <dt>Maximum distance to include station in bias</dt>
+      <dd *ngIf="miscellaneous.bias_max_range as biasMaxRange;
+          else missingData">
+        {{ biasMaxRange }}
+      </dd>
+
+      <dt>Use log amp to compute bias</dt>
+      <dd *ngIf="miscellaneous.bias_log_amp as biasLogAmp;
+          else missingData">
+        {{ biasLogAmp }}
+      </dd>
+
+      <dt>Max allowed bias</dt>
+      <dd *ngIf="miscellaneous.bias_max_bias as biasMaxBias;
+          else missingData">
+        {{ biasMaxBias }}
+      </dd>
+
+      <dt>Use log amp to compute bias</dt>
+      <dd *ngIf="miscellaneous.bias_min_bias as biasMinBias;
+          else missingData">
+        {{ biasMinBias }}
+      </dd>
+
+      <dt>Min # of stations necessary to compute bias</dt>
+      <dd *ngIf="miscellaneous.bias_min_stations as biasMinStations;
+          else missingData">
+        {{ biasMinStations }}
+      </dd>
+
+      <dt>Norm of the bias</dt>
+      <dd *ngIf="miscellaneous.bias_norm as biasNorm;
+          else missingData">
+        {{ biasNorm }}
+      </dd>
+
+      <dt>Median distance used</dt>
+      <dd *ngIf="miscellaneous.median_dist as medDist;
+          else missingData">
+        {{ medDist }}
+      </dd>
+
+      <dt>Outlier level (# of std dev)</dt>
+      <dd *ngIf="miscellaneous.outlier_deviation_level as devLevel;
+          else missingData">
+        {{ devLevel }}
+      </dd>
+
+      <dt>Max magnitude to flag outliers</dt>
+      <dd *ngIf="miscellaneous.outlier_max_mag as maxMag;
+          else missingData">
+        {{ maxMag }}
+      </dd>
+
+    </dl>
+  </div>
+
+  <div class="content left">
+    <h3>ShakeMap Versions</h3>
+
+    <dl *ngIf="smProcessing.shakemap_versions as versions"
+        class="description-table">
+
+      <dt>Code</dt>
+      <dd *ngIf="versions.shakemap_revision as smRev;
+          else missingData">
+        {{ smRev }}
+      </dd>
+
+      <dt>Github commit</dt>
+      <dd *ngIf="versions.shakemap_revision_id as smRevId;
+          else missingData">
+        {{ smRevId }}
+      </dd>
+
+      <dt>Map version</dt>
+      <dd *ngIf="versions.map_version as version;
+          else missingData">
+        {{ version }}
+      </dd>
+
+      <dt>Date</dt>
+      <dd *ngIf="versions.process_time as time;
+          else missingData">
+        {{ time | sharedDateTime }}
+      </dd>
+
+    </dl>
+  </div>
+
+  <mat-divider [vertical]="true"></mat-divider>
+
+  <div class="content right">
+    <h3>Site Response</h3>
+
+    <dl *ngIf="smProcessing.site_response as siteResp"
+        class="description-table" >
+        <dt>Reference rock Vs30</dt>
+        <dd *ngIf="siteResp.vs30default as vs30;
             else missingData">
-          {{ biasMaxMag }}
+          {{ vs30 }}
         </dd>
 
-        <dt>Maximum distance to include station in bias</dt>
-        <dd *ngIf="miscellaneous.bias_max_range as biasMaxRange;
+        <dt>Site correction applied</dt>
+        <dd *ngIf="siteResp.site_correction as site;
             else missingData">
-          {{ biasMaxRange }}
+          {{ site }}
         </dd>
+    </dl>
+  </div>
 
-        <dt>Use log amp to compute bias</dt>
-        <dd *ngIf="miscellaneous.bias_log_amp as biasLogAmp;
-            else missingData">
-          {{ biasLogAmp }}
-        </dd>
+  <div class="content left">
+    <h3>ROI</h3>
 
-        <dt>Max allowed bias</dt>
-        <dd *ngIf="miscellaneous.bias_max_bias as biasMaxBias;
-            else missingData">
-          {{ biasMaxBias }}
-        </dd>
+    <mat-table [dataSource]="smProcessing.roi">
+      <mat-header-row *matHeaderRowDef="headers.roi"></mat-header-row>
+      <mat-row *matRowDef="let myRowData; columns: headers.roi"></mat-row>
 
-        <dt>Use log amp to compute bias</dt>
-        <dd *ngIf="miscellaneous.bias_min_bias as biasMinBias;
-            else missingData">
-          {{ biasMinBias }}
-        </dd>
+      <ng-container matColumnDef="type">
+        <mat-header-cell *matHeaderCellDef>
+          Type
+        </mat-header-cell>
+        <mat-cell [attr.role]="'rowheader'"
+            [class.mat-cell]="false"
+            class="mat-header-cell"
+            *matCellDef="let roi">
 
-        <dt>Min # of stations necessary to compute bias</dt>
-        <dd *ngIf="miscellaneous.bias_min_stations as biasMinStations;
-            else missingData">
-          {{ biasMinStations }}
-        </dd>
+          {{ names.roi[roi.type] ? 
+              names.roi[roi.type] : roi.type }}
 
-        <dt>Norm of the bias</dt>
-        <dd *ngIf="miscellaneous.bias_norm as biasNorm;
-            else missingData">
-          {{ biasNorm }}
-        </dd>
+        </mat-cell>
+      </ng-container>
 
-        <dt>Median distance used</dt>
-        <dd *ngIf="miscellaneous.median_dist as medDist;
-            else missingData">
-          {{ medDist }}
-        </dd>
-
-        <dt>Outlier level (# of std dev)</dt>
-        <dd *ngIf="miscellaneous.outlier_deviation_level as devLevel;
-            else missingData">
-          {{ devLevel }}
-        </dd>
-
-        <dt>Max magnitude to flag outliers</dt>
-        <dd *ngIf="miscellaneous.outlier_max_mag as maxMag;
-            else missingData">
-          {{ maxMag }}
-        </dd>
-
-      </dl>
-    </ng-template>
-  </mat-expansion-panel>
-
-
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-        <mat-panel-title>
-            ShakeMap Versions
-        </mat-panel-title>
-    </mat-expansion-panel-header>
-
-    <ng-template matExpansionPanelContent>
-
-      <dl *ngIf="smProcessing.shakemap_versions as versions"
-          class="description-table">
-
-        <dt>Code</dt>
-        <dd *ngIf="versions.shakemap_revision as smRev;
-            else missingData">
-          {{ smRev }}
-        </dd>
-
-        <dt>Github commit</dt>
-        <dd *ngIf="versions.shakemap_revision_id as smRevId;
-            else missingData">
-          {{ smRevId }}
-        </dd>
-
-        <dt>Map version</dt>
-        <dd *ngIf="versions.map_version as version;
-            else missingData">
-          {{ version }}
-        </dd>
-
-        <dt>Date</dt>
-        <dd *ngIf="versions.process_time as time;
-            else missingData">
-          {{ time | sharedDateTime }}
-        </dd>
-
-      </dl>
-    </ng-template>
-  </mat-expansion-panel>
-
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-        <mat-panel-title>
-            Site Response
-        </mat-panel-title>
-    </mat-expansion-panel-header>
-
-    <ng-template matExpansionPanelContent>
-
-      <dl *ngIf="smProcessing.site_response as siteResp"
-          class="description-table" >
-          <dt>Reference rock Vs30</dt>
-          <dd *ngIf="siteResp.vs30default as vs30;
-              else missingData">
-            {{ vs30 }}
-          </dd>
-
-          <dt>Site correction applied</dt>
-          <dd *ngIf="siteResp.site_correction as site;
-              else missingData">
-            {{ site }}
-          </dd>
-      </dl>
-
-    </ng-template>
-  </mat-expansion-panel>
-
-
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-        <mat-panel-title>
+      <ng-container matColumnDef="roi">
+        <mat-header-cell *matHeaderCellDef>
           ROI
-        </mat-panel-title>
-    </mat-expansion-panel-header>
+        </mat-header-cell>
+        <mat-cell *matCellDef="let roi">
+          {{ roi.roi }}
+        </mat-cell>
+      </ng-container>
 
-    <ng-template matExpansionPanelContent>
+      <ng-container matColumnDef="observation_decay">
+        <mat-header-cell *matHeaderCellDef>
+          Observation Decay
+        </mat-header-cell>
+        <mat-cell *matCellDef="let roi">
+          {{ roi.decay }}
+        </mat-cell>
+      </ng-container>
 
-      <mat-table [dataSource]="smProcessing.roi">
-        <mat-header-row *matHeaderRowDef="headers.roi"></mat-header-row>
-        <mat-row *matRowDef="let myRowData; columns: headers.roi"></mat-row>
-
-        <ng-container matColumnDef="type">
-          <mat-header-cell *matHeaderCellDef>
-            Type
-          </mat-header-cell>
-          <mat-cell [attr.role]="'rowheader'"
-              [class.mat-cell]="false"
-              class="mat-header-cell"
-              *matCellDef="let roi">
-
-            {{ names.roi[roi.type] ? 
-                names.roi[roi.type] : roi.type }}
-
-          </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="roi">
-          <mat-header-cell *matHeaderCellDef>
-            ROI
-          </mat-header-cell>
-          <mat-cell *matCellDef="let roi">
-            {{ roi.roi }}
-          </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="observation_decay">
-          <mat-header-cell *matHeaderCellDef>
-            Observation Decay
-          </mat-header-cell>
-          <mat-cell *matCellDef="let roi">
-            {{ roi.decay }}
-          </mat-cell>
-        </ng-container>
-
-      </mat-table>
-      
-    </ng-template>
-  </mat-expansion-panel>
+    </mat-table>
+  </div>
 
   <ng-template #missingData>
     <dd>{{ formatter.empty }}</dd>
