--- a/src/app/shakemap/metadata/input/input.component.html
+++ b/src/app/shakemap/metadata/input/input.component.html
@@ -1,92 +1,83 @@
-<div *ngIf="smInput?.event_information as eventInfo">
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Event Information
-      </mat-panel-title>
-    </mat-expansion-panel-header>
+<ng-container *ngIf="smInput?.event_information as eventInfo">
+  <h3>Event Information</h3>
 
-    <ng-template matExpansionPanelContent>
-      <dl class="description-table">
+    <dl class="description-table">
 
-        <dt>Description</dt>
-        <dd *ngIf="eventInfo.event_description as description;
-            else missingData">
-          {{ description }}
-        </dd>
+      <dt>Description</dt>
+      <dd *ngIf="eventInfo.event_description as description;
+          else missingData">
+        {{ description }}
+      </dd>
 
-        <dt>ID</dt>
-        <dd *ngIf="eventInfo.event_id as eventId; else missingData">
-          {{ eventId }}
-        </dd>
+      <dt>ID</dt>
+      <dd *ngIf="eventInfo.event_id as eventId; else missingData">
+        {{ eventId }}
+      </dd>
 
-        <dt>Magnitude</dt>
-        <dd *ngIf="eventInfo.magnitude as mag; else missingData">
-          {{ mag }}
-        </dd>
+      <dt>Magnitude</dt>
+      <dd *ngIf="eventInfo.magnitude as mag; else missingData">
+        {{ mag }}
+      </dd>
 
-        <dt>Depth</dt>
-        <dd *ngIf="eventInfo.depth as depth; else missingData">
-          {{ depth | sharedNumber:1:'km' }}
-        </dd>
+      <dt>Depth</dt>
+      <dd *ngIf="eventInfo.depth as depth; else missingData">
+        {{ depth | sharedNumber:1:'km' }}
+      </dd>
 
 
-        <dt>GPS location</dt>
-        <ng-container *ngIf="eventInfo.latitude as lat; else missingData">
-          <ng-container *ngIf="eventInfo.longitude as lng; else missingData">
+      <dt>GPS location</dt>
+      <ng-container *ngIf="eventInfo.latitude as lat; else missingData">
+        <ng-container *ngIf="eventInfo.longitude as lng; else missingData">
 
-            <dd>{{ [lng, lat] | sharedLocation }}</dd>
+          <dd>{{ [lng, lat] | sharedLocation }}</dd>
 
-          </ng-container>
         </ng-container>
+      </ng-container>
 
-        <dt>Origin time</dt>
-        <dd *ngIf="eventInfo.origin_time as oTime; else missingData">
-          {{ oTime | sharedDateTime }}
-        </dd>
+      <dt>Origin time</dt>
+      <dd *ngIf="eventInfo.origin_time as oTime; else missingData">
+        {{ oTime | sharedDateTime }}
+      </dd>
 
-        <dt>Mechanism</dt>
-        <dd *ngIf="eventInfo.mech_src as mechSrc; else missingData">
-          {{ mechSrc }}
-        </dd>
+      <dt>Mechanism</dt>
+      <dd *ngIf="eventInfo.mech_src as mechSrc; else missingData">
+        {{ mechSrc }}
+      </dd>
 
-        <dt>Mechanism source</dt>
-        <dd *ngIf="eventInfo.src_mech as srcMech; else missingData">
-          {{ srcMech }}
-        </dd>
+      <dt>Mechanism source</dt>
+      <dd *ngIf="eventInfo.src_mech as srcMech; else missingData">
+        {{ srcMech }}
+      </dd>
 
-        <dt>Location</dt>
-        <dd *ngIf="eventInfo.location as loc; else missingData">
-          {{ loc }}
-        </dd>
+      <dt>Location</dt>
+      <dd *ngIf="eventInfo.location as loc; else missingData">
+        {{ loc }}
+      </dd>
 
-        <dt>Fault files</dt>
-        <dd *ngIf="eventInfo.faultfiles as faultFiles; else missingData">
-          {{ faultFiles }}
-        </dd>
+      <dt>Fault files</dt>
+      <dd *ngIf="eventInfo.faultfiles as faultFiles; else missingData">
+        {{ faultFiles }}
+      </dd>
 
-        <dt>Fault reference</dt>
-        <dd *ngIf="eventInfo.fault_ref as faultRef; else missingData">
-          {{ faultRef }}
-        </dd>
+      <dt>Fault reference</dt>
+      <dd *ngIf="eventInfo.fault_ref as faultRef; else missingData">
+        {{ faultRef }}
+      </dd>
 
-        <dt>Number of seismic stations</dt>
-        <dd *ngIf="eventInfo.seismic_stations as stations; else missingData">
-          {{ stations }}
-        </dd>
+      <dt>Number of seismic stations</dt>
+      <dd *ngIf="eventInfo.seismic_stations as stations; else missingData">
+        {{ stations }}
+      </dd>
 
-        <dt>Number of DYFI stations</dt>
-        <dd *ngIf="eventInfo.intensity_observations as intObs;
-            else missingData">
-          {{ intObs }}
-        </dd>
+      <dt>Number of DYFI stations</dt>
+      <dd *ngIf="eventInfo.intensity_observations as intObs;
+          else missingData">
+        {{ intObs }}
+      </dd>
 
-      </dl>
-
-    </ng-template>
-  </mat-expansion-panel>
+    </dl>
 
   <ng-template #missingData>
     <dd>{{ formatter.empty }}</dd>
   </ng-template>
-</div>
+</ng-container>
