standardized waveform code

--- a/src/app/waveforms/waveforms/waveforms.component.html
+++ b/src/app/waveforms/waveforms/waveforms.component.html
@@ -14,11 +14,11 @@
 
     <a href="https://www.iris.edu/spud/event/{{ eventId }}"
        target="_blank">IRIS Searchable Product Depository (SPUD) Event Page</a>
-    <p>SPUD is the IRIS DMC’s primary data product management system. Complementing
-      the DMC’s SEED and assembled data archives, which contain time series recordings,
-      the SPUD system primarily contains derivative data products of other types
-      (images, movies, etc.) created either at the DMC or by members of the
-      community.</p>
+    <p>SPUD is the IRIS DMC’s primary data product management system.
+      Complementing the DMC’s SEED and assembled data archives, which contain
+      time series recordings, the SPUD system primarily contains derivative data
+      products of other types (images, movies, etc.) created either at the DMC
+      or by members of the community.</p>
   </div>
 
 </div>
