standardized unkown event files

--- a/src/app/unknown-event-page/unknown-event-page/unknown-event-page.component.html
+++ b/src/app/unknown-event-page/unknown-event-page/unknown-event-page.component.html
@@ -1,16 +1,30 @@
 <app-hazdev-template TITLE="Unknown Event">
 
   <mat-nav-list templateSideNavigation>
-    <!-- TODO :: Delete before production, these are helper links to find events -->
     <app-navigation-group style="border-top:1px solid #ddd; display: block;">
-      <app-navigation-item display="Helper Links" navHrefLink="#" navGroupHeader></app-navigation-item>
+      <app-navigation-item
+        display="Helper Links"
+        navHrefLink="#"
+        navGroupHeader></app-navigation-item>
 
-      <app-navigation-item display="Not Found" navRouterLink="/notfound"></app-navigation-item>
-      <app-navigation-item display="Unknown" navRouterLink="/unknown"></app-navigation-item>
-      <app-navigation-item display="us1000chhc" navRouterLink="/us1000chhc"></app-navigation-item>
-      <app-navigation-item display="us2000crmu" navRouterLink="/us2000crmu"></app-navigation-item>
-      <app-navigation-item display="us2000cmy3" navRouterLink="/us2000cmy3/region-info"></app-navigation-item>
-      <app-navigation-item display="nc72733850 (deleted)" navRouterLink="/nc72733850"></app-navigation-item>
+      <app-navigation-item
+        display="Not Found"
+        navRouterLink="/notfound"></app-navigation-item>
+      <app-navigation-item
+        display="Unknown"
+        navRouterLink="/unknown"></app-navigation-item>
+      <app-navigation-item
+        display="us1000chhc"
+        navRouterLink="/us1000chhc"></app-navigation-item>
+      <app-navigation-item
+        display="us2000crmu"
+        navRouterLink="/us2000crmu"></app-navigation-item>
+      <app-navigation-item
+        display="us2000cmy3"
+        navRouterLink="/us2000cmy3/region-info"></app-navigation-item>
+      <app-navigation-item
+        display="nc72733850 (deleted)"
+        navRouterLink="/nc72733850"></app-navigation-item>
     </app-navigation-group>
   </mat-nav-list>
 
