--- a/src/app/technical/moment-tensor-summary/moment-tensor-summary.component.html
+++ b/src/app/technical/moment-tensor-summary/moment-tensor-summary.component.html
@@ -4,20 +4,26 @@
 
   <mat-table [dataSource]="this.tensors">
     <!-- render order is defined by columnsToDisplay -->
-    <mat-header-row *matHeaderRowDef="this.columnsToDisplay"></mat-header-row>
-    <mat-row *matRowDef="let myRowData; columns: this.columnsToDisplay"></mat-row>
+    <mat-header-row *matHeaderRowDef="this.columnsToDisplay">
+    </mat-header-row>
+    <mat-row *matRowDef="let myRowData; columns: this.columnsToDisplay">
+    </mat-row>
 
     <ng-container matColumnDef="catalog">
       <mat-header-cell *matHeaderCellDef>Catalog</mat-header-cell>
-      <mat-cell *matCellDef="let tensor" [class.unpreferred]="tensor !== tensors[0]">
+      <mat-cell
+        *matCellDef="let tensor"
+        [class.unpreferred]="tensor !== tensors[0]">
         <ng-container *ngIf="tensor === tensors[0]">
           <shared-preferred-check [title]="'Preferred Moment Tensor'">
           </shared-preferred-check>
         </ng-container>
-        <a
-            [routerLink]="['/', event?.id, 'moment-tensor']"
-            [queryParams]="{ source: tensor.product.source, code: tensor.product.code }">
-          {{ tensor.product.properties.eventsource.toUpperCase() }}
+        <a [routerLink]="['/', event?.id, 'moment-tensor']"
+           [queryParams]="{
+            source: tensor.product.source,
+            code: tensor.product.code
+            }">
+           {{ tensor.product.properties.eventsource.toUpperCase() }}
         </a>
       </mat-cell>
     </ng-container>
