fixed unkown event issues

--- a/src/app/unknown-event-page/unknown-event-page/unknown-event-page.component.html
+++ b/src/app/unknown-event-page/unknown-event-page/unknown-event-page.component.html
@@ -1,7 +1,7 @@
 <app-hazdev-template TITLE="Unknown Event">
 
   <mat-nav-list templateSideNavigation>
-    <app-navigation-group style="border-top:1px solid #ddd; display: block;">
+    <app-navigation-group>
       <app-navigation-item
         display="Helper Links"
         navHrefLink="#"
