fixed issues with tell-us module

--- a/src/app/tell-us/tell-us/tell-us.component.html
+++ b/src/app/tell-us/tell-us/tell-us.component.html
@@ -11,11 +11,14 @@
 
 <ng-container *ngIf="!response && !error">
   <p>
-    By contributing your experience of the earthquake, either immediately afterward, or whenever it is possible for you to do
-    so, you make a contribution to the scientific body of information about each earthquake. You also ensure that your area
-    has been represented in the compilation of the maps of shaking. This is a two-way street: not only will you add valuable
-    information on the extent of ground shaking and damage, but in the process we hope you will learn more about how other
-    communities fared and gain a greater understanding of the effects of earthquakes.
+    By contributing your experience of the earthquake, either immediately
+    afterward, or whenever it is possible for you to do so, you make a
+    contribution to the scientific body of information about each earthquake.
+    You also ensure that your area has been represented in the compilation of
+    the maps of shaking. This is a two-way street: not only will you add
+    valuable information on the extent of ground shaking and damage, but in the
+    process we hope you will learn more about how other communities fared and
+    gain a greater understanding of the effects of earthquakes.
   </p>
 
   <p>
