--- a/src/app/tell-us/location/location.component.scss
+++ b/src/app/tell-us/location/location.component.scss
@@ -1,8 +1,8 @@
 .icon-button {
   line-height: 2;
-  margin: 0 .5em;
+  margin: 0 0.5em;
   min-width: 0;
-  padding: 0 .5em;
+  padding: 0 0.5em;
 }
 
 i {
