added aria label to form input

--- a/src/app/tell-us/question/question.component.html
+++ b/src/app/tell-us/question/question.component.html
@@ -36,7 +36,9 @@
               })"
               [disabled]="value !== option.value"
               [placeholder]="option.otherLabel"
-              [value]="option.otherValue"/>
+              [value]="option.otherValue"
+              aria-label="Please describe your situation during the earthquake"
+            />
           </mat-form-field>
         </mat-list-item>
       </ng-container>
