standardized all shakemap code

--- a/src/app/shakemap/pgv/pgv.component.html
+++ b/src/app/shakemap/pgv/pgv.component.html
@@ -11,7 +11,8 @@
       }">
 
     <shared-map
-        [overlays]="shakemap | shakemapOverlays:['shakemap-pgv', 'shakemap-stations']"
+        [overlays]="shakemap | shakemapOverlays:['shakemap-pgv',
+        'shakemap-stations']"
         [baselayer]="'Grayscale'"
         [showScaleControl]="true"
         [showAttributionControl]="false">
