finished pipes in shared, moving onto modules next

--- a/src/app/dyfi/responses/responses.component.html
+++ b/src/app/dyfi/responses/responses.component.html
@@ -54,7 +54,7 @@
         Latitude
       </mat-header-cell>
       <mat-cell *matCellDef="let dyfi">
-        {{ dyfi.lat | sharedUnits:'lat' }}
+        {{ dyfi.lat | sharedUnits:'latitude' }}
       </mat-cell>
     </ng-container>
 
@@ -63,7 +63,7 @@
         Longitude
       </mat-header-cell>
       <mat-cell *matCellDef="let dyfi">
-        {{ dyfi.lon | sharedUnits:'lon' }}
+        {{ dyfi.lon | sharedUnits:'longitude' }}
       </mat-cell>
     </ng-container>
 
