--- a/src/app/tell-us/tell-us/tell-us.component.html
+++ b/src/app/tell-us/tell-us/tell-us.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="eventService.event$ | async; let event">
+<ng-container *ngIf="eventService?.event$ | async; let event">
   <shared-summary-link [productType]="'tellus'" [event]="event">
   </shared-summary-link>
 </ng-container>
