fixed unknown event page module

--- a/src/app/unknown-event-page/unknown-event-page/unknown-event-page.component.html
+++ b/src/app/unknown-event-page/unknown-event-page/unknown-event-page.component.html
@@ -1,6 +1,6 @@
 <app-hazdev-template TITLE="Unknown Event">
 
-  <mat-nav-list templateSideNavigation>ng
+  <mat-nav-list templateSideNavigation>
   </mat-nav-list>
 
   <!-- dyfi unknown event form -->
