--- a/src/app/pager/pager-population/pager-population.component.html
+++ b/src/app/pager/pager-population/pager-population.component.html
@@ -31,8 +31,8 @@
 
   </mat-table>
 
-  <p class="pager-disclaimer">
-    *Estimated exposure only includes population within 
+  <p class="disclaimer">
+    *Estimated exposure only includes population within
     map area (k = x1,000)
     <br/>
     <a href="https://earthquake.usgs.gov/research/shakemap/#intmaps">
